game board is displaying and properly updating with x and o on click

--- a/src/components/gameBoard/gameBoard.css
+++ b/src/components/gameBoard/gameBoard.css
@@ -26,6 +26,6 @@
   font-size: xxx-large;
   text-transform: capitalize;
   cursor: pointer;
-  color: white;
+  color: black;
   font-weight: 900;
 }
